fix: adjust ::after line to prevent layout break

--- a/frontend/src/sass/mixins/_mixins.sass
+++ b/frontend/src/sass/mixins/_mixins.sass
@@ -6,7 +6,10 @@
 
 @mixin title-style
   position: relative
-  display: inline-block
+  display: flex
+  align-items: baseline
+  gap: 1rem
+  white-space: nowrap
   font-size: 5.4rem
   color: vars.$primary
   font-weight: typo.$font-weight-regular
@@ -16,14 +19,10 @@
     font-size: 3.6rem
   &::after
     content: ''
-    position: absolute
-    bottom: 8px
-    left: 125%
-    width: 600%
+    flex: 1
     height: 1px
+    min-width: 20px
     background-color: vars.$primary
-    @include mq.mobile
-      left: 110%
 
 @mixin empty-btn-hover
   box-shadow: inset 0 0 5px vars.$primary, 0 0 12px vars.$primary
